--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -58,10 +58,10 @@
 </head>
 <body class="dark">
     <!-- Preloader -->
-    @*<div class="preloader">
+    <div class="preloader">
         <div class="preloader-icon"></div>
         <span>Loading...</span>
-    </div>*@
+    </div>
     <!-- ./ Preloader -->
     <!-- Layout wrapper -->
     <div class="layout-wrapper">
