--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CrucibleBugTracker.Models.Ticket
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
 <div id="mainContent">
