--- a/Views/Projects/Index.cshtml
+++ b/Views/Projects/Index.cshtml
@@ -196,7 +196,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <a class="btn btn-outline-primary text-start" id="unassignedButton" data-toggle="modal" data-target="#assignPMModal"><span>Unassigned</span></a>
+                                                    <a class="btn btn-outline-primary text-start" id="unassignedButton" data-toggle="modal" data-target="#assignPMModal" onclick="populatePMModal(@project.Id, `@await _ProjectService.GetProjectManagerIdAsync(project.Id, companyId)`, '@project.Name')"><span>Unassigned</span></a>
                                                 }
                                             }
                                         </td>
